scrollbar style fix

--- a/src/global.scss
+++ b/src/global.scss
@@ -93,11 +93,11 @@ as-split-area {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-	background: var(--bgColor-20) !important;
+	background: var(--bgColor-40) !important;
 }
 
 ::-webkit-scrollbar-thumb:active {
-	background: var(--bgColor-20) !important;
+	background: var(--bgColor-40) !important;
 }
 
 ::-webkit-scrollbar-track {
